--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
     "express-handlebars": "^3.1.0",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
+    "firebaseui": "^4.4.0",
     "morgan": "^1.9.1",
     "node-fetch": "^2.6.0"
   },
